--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@ function popupOnClick(e) {
     let hr = document.createElement('hr');
     let html = document.createElement('div');
     let content = '';
-    content += `<b>${info.quest}</b>`;
+    content += `<i class="fa-solid fa-triangle-exclamation"></i> <b>${info.quest}</b>`;
     if (info.stage) {
       content += `<br>${info.stage}`;
     }
@@ -1402,7 +1402,7 @@ function showTooltip(e) {
 
   if (info.quest) {
     content += `<hr/>`
-    content += `<b>${info.quest}</b>`;
+    content += `<i class="fa-solid fa-triangle-exclamation"></i> <b>${info.quest}</b>`;
     if (info.stage) {
       content += `<br>${info.stage}`;
     }
