--- a/index.html
+++ b/index.html
@@ -1870,7 +1870,7 @@ function passesFilter(marker) {
     tags.push(title);
   }
 
-  let s = [o.title, o.name, o.type, o.description, o.sid, o.clue, o.cell, o.proto, o.material, o.quest, o.stage,
+  let s = [o.title, o.name, o.type, o.description, o.sid, o.clue, o.cell, o.proto, o.material, o.quest, o.stage, o.subtype,
 
     info.title,
     info.category,
