--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
   </select>
 </div>
 
+<div id="save-controls">
+  <div class="button-group">
+    <input id="file" type='file' hidden/>
+    <button onclick="loadLocalData()" class="btn-link">Load</button>
+    <button onclick="saveLocalData()" class="btn-link">Save</button>
+    <button onclick="resetLocalData()" class="btn-link">Reset All</button>
+  </div>
+</div>
+
 <div tabindex=0 id="map"></div>
 
 <div id="map-tooltip" class="arrow-left"></div>
@@ -2102,6 +2111,66 @@ window.onload = function(event) {
 
 
 };
+
+
+function resetLocalData() {
+  if (confirm('Are you sure you want to reset settings?')) {
+    localStorage.removeItem(localDataName);
+    location.reload();
+  }
+}
+
+function loadLocalDataFile() {
+  var file = document.querySelector("#file").files[0];
+  if (file) {
+    var reader = new FileReader();
+    reader.readAsText(file, "UTF-8");
+    reader.onload = function (evt) {
+      let data = evt.target.result;
+      evt.target.value = null;
+      try {
+        localData = JSON.parse(data);
+        settings = localData[mapId];
+        console.log('New settings loaded.');
+        saveSettings();
+        location.reload();
+      } catch(e) {
+        console.log(e);
+      }
+    }
+    reader.onerror = function (evt) {
+      alert('error reading file');
+    }
+  }
+}
+
+function loadLocalData() {
+  document.querySelector('#file').onchange = function(e) {
+    loadLocalDataFile();
+  }
+  document.querySelector('#file').value = null;
+  document.querySelector('#file').accept = '.json';
+  document.querySelector('#file').click();
+}
+
+function saveLocalData() {
+  let data = localStorage.getItem(localDataName);
+  if (window.showSaveFilePicker) {
+    window.showSaveFilePicker({suggestedName: localDataName+'.json'}).then(f=>f.createWritable()).then(f=>f.write(data).then(()=>f.close()));
+  } else {
+    let filename = localDataName+'.json';
+    let blob = new Blob([data], {type: "text/json"});
+    if(navigator.msSaveOrOpenBlob) {
+        navigator.msSaveOrOpenBlob(blob, filename);
+    } else {
+        var a = document.body.appendChild(document.createElement("a"));
+        a.href = URL.createObjectURL(blob);
+        a.download = filename;
+        a.click();
+        a.remove();
+    }
+  }
+}
 
 </script>
 
