--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <input id="file" type='file' hidden/>
     <button onclick="loadLocalData()" class="btn-link">Load</button>
     <button onclick="saveLocalData()" class="btn-link">Save</button>
-    <button onclick="resetLocalData()" class="btn-link">Reset All</button>
+    <button onclick="resetLocalData()" class="btn-link">Reset</button>
   </div>
 </div>
 
