--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Joric's Stalker" />
-<meta property="og:description" content="Stalker 2 Interactive Map" />
+<meta property="og:description" content="Stalker 2 Interactive Map (Super-High Resolution)" />
 
 <link rel="stylesheet" href="css/main.css" />
 <link href="js/lib/font-awesome/css/all.min.css" rel="stylesheet">
