--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
 </head>
 <body>
 
-<div id="rank-selector">
-  <select>
-  </select>
-</div>
+<div id="rank-controls">
+  <div id="rank-selector">
+    <select>
+    </select>
+  </div>
 
-<div id="language-selector">
-  <select>
-  </select>
+  <div id="language-selector">
+    <select>
+    </select>
+  </div>
 </div>
 
 <div id="save-controls">
