--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+7<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>Joric's Stalker</title>
@@ -1241,8 +1241,8 @@ function popupOnClick(e) {
     let container = document.createElement('div');
     container.classList.add('tag-container');
     for (const name of o.references) {
-      //container.appendChild(createTag(5, name, name, name, `XStartQuestNodeBySID ${name}`));
-      container.appendChild(createTag(5, name, name, name, `${name}`));
+      container.appendChild(createTag(5, name, name, `XStartQuestNodeBySID ${name}`, `XStartQuestNodeBySID ${name}`));
+      //container.appendChild(createTag(5, name, name, name, `${name}`));
     }
     div.appendChild(document.createElement('hr'));
     div.appendChild(container);
