--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ let mapParam = {};
 let markersData = null;
 let regionsData = null;
 
-let tileset_base = location.protocol === 'file:' ? '../../stalker2_tileset' : 'https://joric.github.io/stalker2_tileset';
+let tileset_base = location.protocol === 'file:' ? '../stalker2_tileset' : 'https://joric.github.io/stalker2_tileset';
 
 let localDataName = 'joricsStalkerMapsGL';
 let localData = JSON.parse(localStorage.getItem(localDataName))||{};
