--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
 <link rel="stylesheet" href="css/main.css" />
 <link href="js/lib/font-awesome/css/all.min.css" rel="stylesheet">
-<link href="js/lib/maptalks-gl/maptalks.css" rel="stylesheet">
-<script type="text/javascript" src="js/lib/maptalks-gl/maptalks-gl.js"></script>
-<script type="text/javascript" src="js/lib/fuse/fuse.js"></script>
 
+<link href="js/lib/maptalks-gl/maptalks-gl.css" rel="stylesheet">
+<script type="text/javascript" src="js/lib/maptalks-gl/maptalks-gl.min.js"></script>
+
+<script type="text/javascript" src="js/lib/fuse/fuse.js"></script>
 <script type="text/javascript" src="js/lib/search-control/search-control.js"></script>
 
 </head>
